# memset_benchmark

./: .gitignore  CMakeLists.txt  README.md
docs/: Histogram.md  annotated_glibc.txt
include/: decl.h  utils.h
src/: bench.cc  calls.S  calls.s  decl.h  lib.c  main.cc  memset_hist.c  rand.h  shims.c  test.cc  timer_utils.h  types.h  utils.h
src/memcpy/: CMakeLists.txt  bench_memcpy.cc  impl.S  impl.c  test_memcpy.cc
src/memset/: CMakeLists.txt  bench_memset.cc  impl.S  impl.c  shims.c  test_memset.cc
src/utils/: CMakeLists.txt  hist_tool.c
